adds swagger prodcut doc
